// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data slice should add channel segments 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {
    "sample": {
      "Unfiltered": [
        {
          "channelSegment": {
            "_uiFilterId": "Unfiltered",
            "id": {
              "channel": {
                "effectiveAt": 1638297900,
                "name": "PDAR.PD01.SHZ",
              },
              "creationTime": 1638297900,
              "endTime": 1638298200,
              "startTime": 1638297900,
            },
            "maskedBy": [],
            "timeseries": [
              {
                "_uiClaimCheckId": "{"domain":{"startTimeSecs":1638297900,"endTimeSecs":1638298200},"id":{"channel":{"effectiveAt":1638297900,"name":"PDAR.PD01.SHZ"},"startTime":1638297900,"endTime":1638298200,"creationTime":1638297900},"type":"WAVEFORM","filter":"Unfiltered","waveform":{"type":"WAVEFORM","startTime":0,"endTime":100,"sampleCount":10,"sampleRateHz":100}}",
                "endTime": 1638298200,
                "sampleCount": 12000,
                "sampleRateHz": 40,
                "samples": undefined,
                "startTime": 1638297900,
                "type": "WAVEFORM",
              },
            ],
            "timeseriesType": "WAVEFORM",
            "units": "NANOMETERS",
          },
          "channelSegmentDescriptor": {
            "channel": {
              "effectiveAt": 1636503404,
              "name": "PDAR.PD01.SHZ",
            },
            "creationTime": 1636503404,
            "endTime": 1636503704,
            "startTime": 1636503404,
          },
          "domainTimeRange": {
            "endTimeSecs": 1638298200,
            "startTimeSecs": 1638297900,
          },
          "processingMasks": [],
        },
      ],
    },
  },
}
`;

exports[`data slice should add default filter definitions by usage for channel segments 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {
    "PDAR.PD01.SHZ.1636503404.1636503404.1636503404.1636503704": {
      "DETECTION": {
        "comments": "Sample Filter Definition Comments",
        "filterDescription": {
          "causal": true,
          "comments": "Test description comments",
          "filterType": "IIR_BUTTERWORTH",
          "highFrequency": 0.8,
          "lowFrequency": 0.3,
          "order": 2,
          "parameters": {
            "groupDelaySec": 1,
            "sampleRateHz": 30,
            "sampleRateToleranceHz": 20,
          },
          "passBandType": "BAND_PASS",
          "zeroPhase": true,
        },
        "name": "Sample Filter Definition Name",
      },
      "FK": {
        "comments": "Sample Filter Definition Comments",
        "filterDescription": {
          "causal": true,
          "comments": "Test description comments",
          "filterType": "IIR_BUTTERWORTH",
          "highFrequency": 0.8,
          "lowFrequency": 0.3,
          "order": 2,
          "parameters": {
            "groupDelaySec": 1,
            "sampleRateHz": 30,
            "sampleRateToleranceHz": 20,
          },
          "passBandType": "BAND_PASS",
          "zeroPhase": true,
        },
        "name": "Sample Filter Definition Name",
      },
      "ONSET": {
        "comments": "Sample Filter Definition Comments",
        "filterDescription": {
          "causal": true,
          "comments": "Test description comments",
          "filterType": "IIR_BUTTERWORTH",
          "highFrequency": 0.8,
          "lowFrequency": 0.3,
          "order": 2,
          "parameters": {
            "groupDelaySec": 1,
            "sampleRateHz": 30,
            "sampleRateToleranceHz": 20,
          },
          "passBandType": "BAND_PASS",
          "zeroPhase": true,
        },
        "name": "Sample Filter Definition Name",
      },
    },
  },
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should add events 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {
    "eventID": {
      "id": "eventID",
    },
  },
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should add filter definitions 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {
    "Sample Filter Definition Name": {
      "40": {
        "comments": "Sample Filter Definition Comments",
        "filterDescription": {
          "causal": true,
          "comments": "Test description comments",
          "filterType": "IIR_BUTTERWORTH",
          "highFrequency": 0.8,
          "lowFrequency": 0.3,
          "order": 2,
          "parameters": {
            "aCoefficients": [
              4.4,
              5.5,
              6.6,
            ],
            "bCoefficients": [
              1.1,
              2.2,
              3.3,
            ],
            "groupDelaySec": 1,
            "sampleRateHz": 40,
            "sampleRateToleranceHz": 20,
          },
          "passBandType": "BAND_PASS",
          "zeroPhase": true,
        },
        "name": "Sample Filter Definition Name",
      },
    },
  },
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 2`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 3`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 2`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 3`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 4`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionByUsageForChannelSegments": {},
  "defaultFilterDefinitionByUsageForChannelSegmentsEventOpen": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetectionHypotheses": {},
  "filterDefinitionsForSignalDetectionHypothesesEventOpen": {},
  "filterDefinitionsForSignalDetections": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "missingSignalDetectionsHypothesesForFilterDefinitions": [],
  "processingMaskDefinitions": {},
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getDefaultFilterDefinitionByUsageForChannelSegments": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsForSignalDetectionHypotheses": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getProcessingMaskDefinitions": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
  },
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;
